<resources>
    <string name="app_name">Multi login</string>
    <string name="card_title">Identification Card</string>
    <string name="img_user_description">User image</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_provider">Provider:</string>
    <string name="description_user_barcode">User barcode</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="facebook_application_id">1020463658314112</string>
    <string name="fb_login_protocol_scheme">fb1020463658314112</string>

</resources>
